change images scale to fill to aspect fill(14/2/17)

--- a/iONLive/iONLiveUI/Sharing/sharing.storyboard
+++ b/iONLive/iONLiveUI/Sharing/sharing.storyboard
@@ -101,7 +101,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="thumb12" translatesAutoresizingMaskIntoConstraints="NO" id="Atj-6M-99x">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="thumb12" translatesAutoresizingMaskIntoConstraints="NO" id="Atj-6M-99x">
                                                             <rect key="frame" x="20" y="8" width="45" height="45"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="45" id="MmL-cS-yxb"/>
@@ -388,7 +388,7 @@
                                                                 <action selector="contactSharingButtonClicked:" destination="Ny2-BP-Mm4" eventType="touchUpInside" id="CbY-ff-48x"/>
                                                             </connections>
                                                         </button>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dummyUser" translatesAutoresizingMaskIntoConstraints="NO" id="v8E-RL-utQ">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dummyUser" translatesAutoresizingMaskIntoConstraints="NO" id="v8E-RL-utQ">
                                                             <rect key="frame" x="20" y="10" width="40" height="40"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="40" id="Fn7-Lr-KkY"/>
@@ -759,7 +759,7 @@
                                                                 <action selector="contactSharingButtonClicked:" destination="azU-VM-D2E" eventType="touchUpInside" id="drF-1I-GH6"/>
                                                             </connections>
                                                         </button>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dummyUser" translatesAutoresizingMaskIntoConstraints="NO" id="Kj2-6u-Y0E">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dummyUser" translatesAutoresizingMaskIntoConstraints="NO" id="Kj2-6u-Y0E">
                                                             <rect key="frame" x="20" y="10" width="40" height="40"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="40" id="Lqh-aa-H3a"/>
@@ -949,7 +949,7 @@
                                                                 <action selector="Ca7chContactsSharingButtonClicked:" destination="tgb-tl-oVX" eventType="touchUpInside" id="72Z-8M-eDn"/>
                                                             </connections>
                                                         </button>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dummyUser" translatesAutoresizingMaskIntoConstraints="NO" id="eIU-fc-aAG">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dummyUser" translatesAutoresizingMaskIntoConstraints="NO" id="eIU-fc-aAG">
                                                             <rect key="frame" x="20" y="10" width="40" height="40"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="40" id="4ob-2t-krt"/>
