--- a/iONLive/iONLiveUI/MyChannel/MyChannel.storyboard
+++ b/iONLive/iONLiveUI/MyChannel/MyChannel.storyboard
@@ -147,7 +147,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="thumb12" translatesAutoresizingMaskIntoConstraints="NO" id="jfD-0G-DsL">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="thumb12" translatesAutoresizingMaskIntoConstraints="NO" id="jfD-0G-DsL">
                                                             <rect key="frame" x="20" y="3" width="60" height="65"/>
                                                             <gestureRecognizers/>
                                                             <constraints>
@@ -674,7 +674,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="71"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="thumb12" translatesAutoresizingMaskIntoConstraints="NO" id="koW-7h-ltn">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="thumb12" translatesAutoresizingMaskIntoConstraints="NO" id="koW-7h-ltn">
                                                             <rect key="frame" x="19" y="3" width="60" height="65"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="65" id="ahx-yy-3fP"/>
@@ -885,7 +885,7 @@
                                                                 <constraint firstAttribute="width" constant="40" id="kxl-hm-YoX"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="thumb12" translatesAutoresizingMaskIntoConstraints="NO" id="PiX-fg-0mB">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="thumb12" translatesAutoresizingMaskIntoConstraints="NO" id="PiX-fg-0mB">
                                                             <rect key="frame" x="366" y="5" width="35" height="35"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="35" id="9M7-hs-bvV"/>
